ex01/grammar_output.txt
=============================== RESTART: Shell ===============================
>>> 
================= RESTART: C:\Nir\code\pl16\ex01\grammar.py =================
Analyzing grammar:
    S -> ID ASSIGN E
    S -> IF LP E RP S ELSE S
    E -> T EP
    T -> ID
    T -> LP E RP
    EP -> 
    EP -> PLUS E

terminals =  set(['RP', 'ASSIGN', 'PLUS', 'LP', 'ELSE', 'ID', 'IF'])
nonterminals =  set(['S', 'E', 'T', 'EP'])

nullable =  set(['EP'])

first(ASSIGN) = set(['ASSIGN'])
first(E) = set(['ID', 'LP'])
first(ELSE) = set(['ELSE'])
first(EP) = set(['PLUS'])
first(ID) = set(['ID'])
first(IF) = set(['IF'])
first(LP) = set(['LP'])
first(PLUS) = set(['PLUS'])
first(RP) = set(['RP'])
first(S) = set(['ID', 'IF'])
first(T) = set(['ID', 'LP'])

follow(E) = set(['RP', 'EOF', 'ELSE'])
follow(EP) = set(['RP', 'EOF', 'ELSE'])
follow(S) = set(['EOF', 'ELSE'])
follow(T) = set(['RP', 'EOF', 'PLUS', 'ELSE'])

select(E -> T EP) = set(['ID', 'LP'])
select(EP -> ) = set(['RP', 'EOF', 'ELSE'])
select(EP -> PLUS E) = set(['PLUS'])
select(S -> ID ASSIGN E) = set(['ID'])
select(S -> IF LP E RP S ELSE S) = set(['IF'])
select(T -> ID) = set(['ID'])
select(T -> LP E RP) = set(['LP'])

Grammar is LL(1).


Analyzing grammar:
    obj -> LB RB
    obj -> LB members RB
    members -> keyvalue
    members -> members COMMA members
    keyvalue -> STRING COLON value
    value -> STRING
    value -> INT
    value -> obj

terminals =  set(['LB', 'STRING', 'INT', 'COLON', 'RB', 'COMMA'])
nonterminals =  set(['keyvalue', 'obj', 'value', 'members'])

nullable =  set([])

first(COLON) = set(['COLON'])
first(COMMA) = set(['COMMA'])
first(INT) = set(['INT'])
first(LB) = set(['LB'])
first(RB) = set(['RB'])
first(STRING) = set(['STRING'])
first(keyvalue) = set(['STRING'])
first(members) = set(['STRING'])
first(obj) = set(['LB'])
first(value) = set(['INT', 'LB', 'STRING'])

follow(keyvalue) = set(['COMMA', 'RB'])
follow(members) = set(['COMMA', 'RB'])
follow(obj) = set(['COMMA', 'EOF', 'RB'])
follow(value) = set(['COMMA', 'RB'])

select(keyvalue -> STRING COLON value) = set(['STRING'])
select(members -> keyvalue) = set(['STRING'])
select(members -> members COMMA members) = set(['STRING'])
select(obj -> LB RB) = set(['LB'])
select(obj -> LB members RB) = set(['LB'])
select(value -> INT) = set(['INT'])
select(value -> STRING) = set(['STRING'])
select(value -> obj) = set(['LB'])

Grammar is not LL(1), as the following rules have intersecting SELECT sets:
    obj -> LB RB
    obj -> LB members RB
Grammar is not LL(1), as the following rules have intersecting SELECT sets:
    members -> keyvalue
    members -> members COMMA members


Analyzing grammar:
    obj -> LB obj_body
    obj_body -> members RB
    obj_body -> RB
    members -> keyvalue after_keyvalue
    after_keyvalue -> 
    after_keyvalue -> COMMA members
    keyvalue -> STRING COLON value
    value -> STRING
    value -> INT
    value -> obj

terminals =  set(['LB', 'STRING', 'INT', 'COLON', 'RB', 'COMMA'])
nonterminals =  set(['after_keyvalue', 'obj', 'value', 'keyvalue', 'obj_body', 'members'])

nullable =  set(['after_keyvalue'])

first(COLON) = set(['COLON'])
first(COMMA) = set(['COMMA'])
first(INT) = set(['INT'])
first(LB) = set(['LB'])
first(RB) = set(['RB'])
first(STRING) = set(['STRING'])
first(after_keyvalue) = set(['COMMA'])
first(keyvalue) = set(['STRING'])
first(members) = set(['STRING'])
first(obj) = set(['LB'])
first(obj_body) = set(['STRING', 'RB'])
first(value) = set(['INT', 'LB', 'STRING'])

follow(after_keyvalue) = set(['RB'])
follow(keyvalue) = set(['COMMA', 'RB'])
follow(members) = set(['RB'])
follow(obj) = set(['COMMA', 'EOF', 'RB'])
follow(obj_body) = set(['COMMA', 'EOF', 'RB'])
follow(value) = set(['COMMA', 'RB'])

select(after_keyvalue -> ) = set(['RB'])
select(after_keyvalue -> COMMA members) = set(['COMMA'])
select(keyvalue -> STRING COLON value) = set(['STRING'])
select(members -> keyvalue after_keyvalue) = set(['STRING'])
select(obj -> LB obj_body) = set(['LB'])
select(obj_body -> RB) = set(['RB'])
select(obj_body -> members RB) = set(['STRING'])
select(value -> INT) = set(['INT'])
select(value -> STRING) = set(['STRING'])
select(value -> obj) = set(['LB'])

Grammar is LL(1).


Analyzing grammar:
    obj -> LB obj_body
    obj_body -> members RB
    obj_body -> RB
    members -> keyvalue after_keyvalue
    after_keyvalue -> 
    after_keyvalue -> COMMA members
    keyvalue -> STRING COLON value
    value -> STRING
    value -> INT
    value -> obj

terminals =  set(['LB', 'STRING', 'INT', 'COLON', 'RB', 'COMMA'])
nonterminals =  set(['after_keyvalue', 'obj', 'value', 'keyvalue', 'obj_body', 'members'])

nullable =  set(['after_keyvalue'])

first(COLON) = set(['COLON'])
first(COMMA) = set(['COMMA'])
first(INT) = set(['INT'])
first(LB) = set(['LB'])
first(RB) = set(['RB'])
first(STRING) = set(['STRING'])
first(after_keyvalue) = set(['COMMA'])
first(keyvalue) = set(['STRING'])
first(members) = set(['STRING'])
first(obj) = set(['LB'])
first(obj_body) = set(['STRING', 'RB'])
first(value) = set(['INT', 'LB', 'STRING'])

follow(after_keyvalue) = set(['RB'])
follow(keyvalue) = set(['COMMA', 'RB'])
follow(members) = set(['RB'])
follow(obj) = set(['COMMA', 'EOF', 'RB'])
follow(obj_body) = set(['COMMA', 'EOF', 'RB'])
follow(value) = set(['COMMA', 'RB'])

select(after_keyvalue -> ) = set(['RB'])
select(after_keyvalue -> COMMA members) = set(['COMMA'])
select(keyvalue -> STRING COLON value) = set(['STRING'])
select(members -> keyvalue after_keyvalue) = set(['STRING'])
select(obj -> LB obj_body) = set(['LB'])
select(obj_body -> RB) = set(['RB'])
select(obj_body -> members RB) = set(['STRING'])
select(value -> INT) = set(['INT'])
select(value -> STRING) = set(['STRING'])
select(value -> obj) = set(['LB'])

Grammar is LL(1).
